[gd_scene load_steps=25 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/img_fundoChao.png" type="Texture" id=2]
[ext_resource path="res://scripts/felpudo.gd" type="Script" id=3]
[ext_resource path="res://assets/felpudoIdle.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudoBate.png" type="Texture" id=5]
[ext_resource path="res://assets/grave.png" type="Texture" id=6]
[ext_resource path="res://scripts/barra.gd" type="Script" id=7]
[ext_resource path="res://assets/barra_recipiente.png" type="Texture" id=8]
[ext_resource path="res://assets/barra.png" type="Texture" id=9]
[ext_resource path="res://assets/font70.fnt" type="BitmapFont" id=10]
[ext_resource path="res://assets/font50.fnt" type="BitmapFont" id=11]
[ext_resource path="res://assets/barril.png" type="Texture" id=12]
[ext_resource path="res://sounds/bater.wav" type="Sample" id=13]
[ext_resource path="res://sounds/ganhou.wav" type="Sample" id=14]
[ext_resource path="res://sounds/passouFase.wav" type="Sample" id=15]
[ext_resource path="res://sounds/passouFase2.wav" type="Sample" id=16]
[ext_resource path="res://sounds/pegou.wav" type="Sample" id=17]
[ext_resource path="res://sounds/perdeu.wav" type="Sample" id=18]
[ext_resource path="res://sounds/whenBum.wav" type="Sample" id=19]
[ext_resource path="res://assets/speakerOn300px.png" type="Texture" id=20]
[ext_resource path="res://scripts/btSound.gd" type="Script" id=21]
[ext_resource path="res://scripts/tempoJogado.gd" type="Script" id=22]

[sub_resource type="Animation" id=1]

resource/name = "Bater"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Parado:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Batendo:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="SampleLibrary" id=2]

samples/bater = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 13 )
}
samples/ganhou = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 14 )
}
samples/passouFase = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 15 )
}
samples/passouFase2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 16 )
}
samples/pegou = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/perdeu = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 18 )
}
samples/whenBum = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 19 )
}

[node name="MainNode" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( -758.5, -63.6804 )
transform/scale = Vector2( 2.028, 2.1017 )
texture = ExtResource( 2 )
centered = false
modulate = Color( 1, 0.996094, 0.996094, 1 )

[node name="Felpudo" type="Node2D" parent="."]

transform/pos = Vector2( 150, 1070 )
z/z = 1
script/script = ExtResource( 3 )

[node name="Parado" type="Sprite" parent="Felpudo"]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Batendo" type="Sprite" parent="Felpudo"]

visibility/visible = false
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Tumulo" type="Sprite" parent="Felpudo"]

visibility/visible = false
transform/pos = Vector2( -46, 40 )
transform/scale = Vector2( 0.2075, 0.1454 )
texture = ExtResource( 6 )
flip_h = true
modulate = Color( 0.345098, 0.698039, 0.172549, 1 )

[node name="Animacao" type="AnimationPlayer" parent="Felpudo"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Bater = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Camera" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="BarrisAtivos" type="Node2D" parent="."]

[node name="BarrisADestruir" type="Node2D" parent="."]

[node name="BarraDeTempo" type="Node2D" parent="."]

transform/pos = Vector2( 33.6274, 747.166 )
transform/rot = 90.0
transform/scale = Vector2( 2, 2 )
script/script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BarraDeTempo"]

texture = ExtResource( 8 )

[node name="Marcador" type="Sprite" parent="BarraDeTempo"]

texture = ExtResource( 9 )
region = true
region_rect = Rect2( 0, 0, 188, 23 )

[node name="Control" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Label" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 112.0
margin/top = 17.0
margin/right = 533.0
margin/bottom = 93.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FATORE= "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Fatoracao" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 1220.0
margin/right = 720.0
margin/bottom = 1274.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="baterEsquerda" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 980.0
margin/right = 200.0
margin/bottom = 1280.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="baterCentro" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 980.0
margin/right = 380.0
margin/bottom = 1280.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="baterDireita" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 380.0
margin/top = 980.0
margin/right = 718.0
margin/bottom = 1280.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="tabua" type="Node2D" parent="."]

transform/pos = Vector2( 513, 0 )
transform/scale = Vector2( 1.6, 1.6 )

[node name="premios" type="Node2D" parent="."]

[node name="premio1" type="Sprite" parent="premios"]

visibility/visible = false
transform/pos = Vector2( -40, 440 )
transform/scale = Vector2( 0.244026, 0.397005 )
texture = ExtResource( 12 )
centered = false

[node name="premio2" type="Sprite" parent="premios"]

visibility/visible = false
transform/pos = Vector2( -40, 350 )
transform/scale = Vector2( 0.244026, 0.397005 )
texture = ExtResource( 12 )
centered = false

[node name="premio3" type="Sprite" parent="premios"]

visibility/visible = false
transform/pos = Vector2( -40, 260 )
transform/scale = Vector2( 0.244026, 0.397005 )
texture = ExtResource( 12 )
centered = false

[node name="premio4" type="Sprite" parent="premios"]

visibility/visible = false
transform/pos = Vector2( -40, 170 )
transform/scale = Vector2( 0.244026, 0.397005 )
texture = ExtResource( 12 )
centered = false

[node name="premio5" type="Sprite" parent="premios"]

visibility/visible = false
transform/pos = Vector2( -40, 80 )
transform/scale = Vector2( 0.244026, 0.397005 )
texture = ExtResource( 12 )
centered = false

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="Timer2" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="sound" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 2 )
config/pitch_random = 0.0

[node name="TextureButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 5.0
margin/right = 57.0
margin/bottom = 65.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 20 )
params/resize_mode = 0
params/scale = Vector2( 0.2, 0.2 )
params/stretch_mode = 0
params/modulate = Color( 0.417536, 0.142639, 0.960938, 1 )
script/script = ExtResource( 21 )

[node name="lbRecorde" type="Label" parent="."]

rect/scale = Vector2( 1.8, 1.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 356.0
margin/top = 1188.0
margin/right = 495.0
margin/bottom = 1206.0
text = "O récorde é de 527' : "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lbTempoJogado" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 610.0
margin/top = 1189.0
margin/right = 658.0
margin/bottom = 1203.0
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 22 )

[node name="tmTempoJogado" type="Timer" parent="lbTempoJogado"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="pressed" from="baterEsquerda" to="." method="_on_baterEsquerda_pressed"]

[connection signal="pressed" from="baterCentro" to="." method="_on_baterCentro_pressed"]

[connection signal="pressed" from="baterDireita" to="." method="_on_baterDireita_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Timer2" to="." method="_on_Timer_2_timeout"]

[connection signal="timeout" from="lbTempoJogado/tmTempoJogado" to="lbTempoJogado" method="_on_tmTempoJogado_timeout"]


